fixed nav overflow issue

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
 
 html{
     font-size: 62.5%;
+    width: 100vw;
 }
 body{
     font-family: 'Rubik', sans-serif;
@@ -123,7 +124,7 @@ h1,h2{
 nav{
     box-shadow: var(--shadow);
     padding-block: 1rem;
-    width: 100%;
+    width: 100vw;
     position: fixed;
     top: 0;
 
